# MCP-AI-Note-Taking

./: .gitignore  Dockerfile  README.md  app.py  client.py  main.py  notes.txt  pyproject.toml  requirements.txt
server/: launch_server.json  note_server.json  note_server.py  tools_api_server.py
