[project]
name = "ai-notes"
version = "0.1.0"
description = "MCP server for note-taking. Allows you to instruct an LLM to undertake note-taking tasks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.13",
    "fastmcp>=2.8.1",
    "langchain-groq>=0.3.2",
    "mcp-use>=1.3.1",
    "mcp[cli]>=1.9.4",
    "streamlit>=1.46.0",
]
